# NutShell-Search

./: CMakeLists.txt  LICENSE  README.md
docs/: 搜索引擎项目_pdf.txt  搜索引擎项目设计  项目技术文档.md
include/common/: CacheManager.h  Config.h  DirectoryScanner.h  JiebaSingleton.h  LRUCache.h  TextUtils.h  Trie.h  Utils.h
include/offline/: KeywordProcessor.h  PageProcessor.h
include/online/: KeywordService.h  TlvCodec.h  WebSearchService.h
src/common/: CacheManager.cpp  Config.cpp  DirectoryScanner.cpp  TextUtils.cpp  Utils.cpp
src/offline/: KeywordProcessor.cpp  PageProcessor.cpp  offline_main.cpp
src/online/: KeywordService.cpp  TlvCodec.cpp  WebSearchService.cpp  server_main.cpp
static/: index.html
